# openapi.json
@@ -168,8 +168,8 @@
     },
     "/v1/resolutions/{resolution_id}/documents/{candidate_id}": {
       "post": {
-        "summary": "Create Jats Document",
-        "operationId": "create_jats_document_v1_resolutions__resolution_id__documents__candidate_id__post",
+        "summary": "Create Pmc Document",
+        "operationId": "create_pmc_document_v1_resolutions__resolution_id__documents__candidate_id__post",
         "security": [
           {
             "HTTPBearer": []
@@ -2457,6 +2457,10 @@
             "minimum": 0.0,
             "title": "Coverage"
           },
+          "provisional": {
+            "type": "boolean",
+            "title": "Provisional"
+          },
           "concern_count": {
             "type": "integer",
             "minimum": 0.0,
@@ -2482,6 +2486,7 @@
           "content_level",
           "review_score",
           "coverage",
+          "provisional",
           "concern_count",
           "published_at",
           "expires_at"
